--- a/Sass/_layout.scss
+++ b/Sass/_layout.scss
@@ -34,6 +34,7 @@ header{
     min-height: 510.297px;
     text-wrap: nowrap;
     flex-wrap: nowrap;
+    margin-right: 5px;
     .home{
         display: flex;
         flex-direction: column;
@@ -89,6 +90,9 @@ header{
 
 
 main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex-grow: 3;
     grid-area: main;
     display: flex;
@@ -97,12 +101,13 @@ main{
     grid-column: 2;
     grid-row: 1;
     overflow: hidden;
-    width: 100%;
+    max-width: 1344px;
     min-width: 416px;
     overflow-y: scroll;
     overflow-x: hidden;
     height: 90vh;
     min-height: 510.297px;
+
     .portade{
         grid-column: 1;
         grid-row: 1; /* Asigna .portade a la primera fila */
@@ -116,8 +121,7 @@ main{
         display: block;
         flex-direction: column;
         gap: 80px;
-        //width: 965px;
-        width: 94%;
+        width: 96%;
         height: 340px;
     }
     
@@ -128,7 +132,7 @@ main{
         background: linear-gradient( rgb(5 124 136) 0%, $gray 8%,);
         padding: 20px;
         margin: 0  5px 0 5px;
-        width: 94%;
+        width: 96%;
         height: fit-content;
     }
 
@@ -136,9 +140,9 @@ main{
         grid-column: 1;
         width: 100%;
         display: flex;
+        justify-content: center;
         grid-column: 1;
-        display: inline-block;
-        width: 94%;
+        width: calc(100% + 6px);
         height: fit-content;
         .about{
             width: 100%;
@@ -164,7 +168,7 @@ main{
                 flex-direction: row;
                 justify-content: space-around;
                 align-items: baseline;
-                width: 100%;
+                width: 98%;
                 margin: 0 auto;
                 text-align: center;
                 font-size: .8rem;
@@ -182,13 +186,15 @@ main{
         }
       }
       &:hover{
-        padding-left: -5px;
-        width: calc(100% + 10px);
+        width: calc(100% + 7px);
       }
 }
 
 //----------Aside
 .rigthSide{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex-grow: 1;
     grid-area: rigthSide;
     z-index: 0;
@@ -196,16 +202,13 @@ main{
     grid-column: 3;
     grid-row: 1;
     background-color: #0f0f0f;
-    //width: 100%;
     border-radius: 10px 10px;
     height: 88.7vh;
     min-height: 501.219px;
     right: 15px;
     overflow: hidden;
-    margin-top: 10px;
-    min-width: 280px;
-    opacity: 0 !important;
-    display: none !important;
+    margin: 10px 5px;
+    width: 98%;
 }
 
   .controls{
@@ -263,7 +266,12 @@ main{
         margin: 0;
         grid-template-rows: 2;
         //grid-template-columns: 9% 54.5% 22%;
-        grid-template-columns: 100px 61% auto;
+        grid-template-columns: 105px 61% auto;
+    }
+    header{
+        padding-top: 10px;
+        height: 88vh;
+        min-height: 500.297px;
     }
     .main{
         min-width: 416px;
