--- a/Sass/_components.scss
+++ b/Sass/_components.scss
@@ -975,9 +975,9 @@ main{
         justify-content: flex-start;
         align-items: center;
         position: relative;
-        
         .amentes__img{
             display: flex;
+            width: 100%;
             flex-direction: column;
             align-items: flex-end;
             padding: 0;
@@ -986,10 +986,11 @@ main{
                 flex-direction: column;
                 padding: 0;
                 margin: 0;
-                width: 375px;
+                width: 100%;
                 align-items: flex-start;
                 .img__portade{
-                    width: 375px;
+                    width: 100%;
+                    height: auto;
                     border-radius: $radius;
                 }
                 .img__title{
@@ -1062,16 +1063,39 @@ main{
         }
         .artist__descript {
             padding: 20px;
-            height: 130px;
+            height: max-content;
+            padding-bottom: 11%;
             h3 {
                 margin: 10px 0;
                 font-size: 16px;
                 color: #ffffff;
             }
-            .artist__ear{
-                font-size: 16px;
-                color: #b3b3b3;
-                margin-bottom: 0;
+            div{
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+                height: 60%;
+                .artist__ear{
+                    font-size: 16px;
+                    color: #b3b3b3;
+                    margin-bottom: 0;
+                    width: 71%;
+                    overflow: hidden;
+                    text-wrap: wrap;
+                }
+                button {
+                    padding: 7px 14px;
+                    color: #ffffff;
+                    border-radius: 20px;
+                    cursor: pointer;
+                    font-size: 14px;
+                    margin: 0;
+                    height: 30px;
+                    background-color: transparent;
+                    border: 1px solid #464646;
+                    font-weight: bold;
+                    text-wrap: nowrap;
+                }
             }
             .artist__text {
                 font-size: 13px;
@@ -1092,57 +1116,45 @@ main{
                 text-overflow: ellipsis;
                 
             }
-            button {
-                position: relative;
-                left: 220px;
-                bottom: 25px;
-                display: inline-block;
-                padding: 7px 14px;
-                color: #ffffff;
-                border-radius: 20px;
-                cursor: pointer;
-                font-size: 14px;
-                margin: 0;
-                height: 30px;
-                background-color: transparent;
-                border: 1px solid #464646;
-                font-weight: bold;
-                
-            }
+            
             
         }
         
     }
     .credits{
-        width: 375px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
         margin: 20px auto;
         background-color: #181818;
         border-radius: 10px;
         .credits__title{
             display: flex;
+            width: 90%;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
             flex-wrap: nowrap;
             h3{
                 color: $whiteLight;
-                padding-left: 25px;
                 font-size: 1.1rem;
+                text-align: center;
             }
             a{
                 color: $whiteLight;
                 text-decoration: none;
-                padding-right: 25px;
                 font-size: 1rem;
+                text-align: center;
             }
         }
         .credits__band{
             display: flex;
+            width: 90%;
             flex-direction: row;
             color: $whiteLight;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
-            gap: 50px;
             h3{
                 margin-bottom: 5px;
             }
@@ -1162,6 +1174,7 @@ main{
                 background-color: transparent;
                 border: 1px solid #464646;
                 font-weight: bold;
+                text-wrap: nowrap;
             }
             .button:hover {
                 scale: 1.2;
@@ -1170,13 +1183,17 @@ main{
     }
     .articlesPromotion{
         @include promotion;
-        width: 335px;
+        width: 100%;
+        display: flex;
+        align-items: center;
         height: auto;
         margin: 20px auto;
         background-color: #181818;
         border-radius: 10px;
-        padding: 20px;
+        padding: 20px 0;
         h5{
+            width: fit-content;
+
             margin: 0px;
             font-size: 1.1rem;
             color: $whiteLight;
@@ -1184,7 +1201,7 @@ main{
         div{
         overflow: hidden;
         .promotion__text{
-            width: 230px;
+            width: 100%;
             text-overflow: ellipsis;
             font-weight: normal;
         }
@@ -1193,29 +1210,36 @@ main{
 
     .next{
         @include promotion;
-        width: 98%;
+        width: 100%;
         height: auto;
         margin: 20px auto;
         background-color: #181818;
         border-radius: 10px;
-        padding: 20px;
+        padding: 20px 0;
+        justify-content: center;
+        align-items: center;
         .next__title{
             display: flex;
+            width: 90%;
             flex-direction: row;
-            justify-content: space-around;
+            justify-content: flex-start;
             align-items: center;
-            gap: 10px;
             text-wrap: nowrap;
             color: $whiteLight;
-            gap: 20px;
+
             h3{
+                width: 80%;
                 font-size: 15px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                flex-shrink: 2.5;
             }
             a{
                 color: $whiteLight;
                 font-size: 14px;
                 text-decoration: none;
                 opacity: 1 !important;
+                flex-shrink: 1;
                 &:hover{
                     text-decoration: underline;
                     scale: 1.05;
@@ -1224,15 +1248,16 @@ main{
             }
         }
         .next__song{
-            width: 340px;
+            width: 90%;
             display: flex;
             flex-direction: row;
-            justify-content: flex-start;
+            justify-content: space-around;
             align-items: center;
             gap: 10px;
             padding: 10px;
             border-radius: $radius;
             cursor: pointer;
+            overflow: hidden;
             img{
                 width: 55px;
                 height: 55px;
@@ -1248,16 +1273,21 @@ main{
                 opacity: 0;
             }
             div{
+                width: 1102%;
                 gap: 15px;
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
                 justify-content: center;
                 gap: 5px;
+                overflow: hidden;
                 h4{
                     margin: 0;
                     color: $whiteLight;
                     text-wrap: nowrap;
+                    width: 110%;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
                 p{
                     margin: 0;
@@ -1302,11 +1332,13 @@ main{
             
         }
     }
+    &:hover{
+        padding-left: -7px;
+    }
     }
     
     &:hover{
         .content__scrollable{
-            padding-left: 7px;
             
             .amentesSunt{
                 .amentes__img{
@@ -1325,10 +1357,9 @@ main{
 
 
 .controls{
-    overflow: hidden;
     .actualSong{
         .actualSong__song{
-            width: 340px;
+            width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
@@ -1339,15 +1370,21 @@ main{
                 border-radius: 5px;
             }
             div{
+                width: 50%;
                 gap: 15px;
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
                 justify-content: center;
                 gap: 5px;
+                overflow: hidden;
                 h4{
+                    width: 100%;
                     margin: 0;
                     color: $whiteLight;
+                    text-wrap: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
                 p{
                     margin: 0;
@@ -1414,7 +1451,8 @@ main{
                 color: $white;
             }
             .reproduction__range{
-                width: 65%;
+                width: 80%;
+                min-width: 20px;
                @include inputRange;
 
             }
@@ -1423,12 +1461,14 @@ main{
 
     }
     .settings{
+        scale: 0.85;
         i{
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            gap: 10px;        
+            gap: 10px;
+                    
             img{
                 width: 25px;
                 height: 25px;
@@ -1436,6 +1476,11 @@ main{
             .setting__range{
                 width: 65%;
                 @include inputRange;
+            }
+            &:nth-of-type(5){
+                width: 100%;
+                min-width: 25%;
+            
             }
         }
 
@@ -1482,7 +1527,7 @@ main{
         .home{
             margin-top: 10px;
             margin-left: 12px;
-            width: 80px;
+            width: 60px;
             align-items: center;
             scale: 1.2;
             border-radius: $radius $radius 0 0 ;
@@ -1500,7 +1545,7 @@ main{
         }
         .nav{
             border-radius: 0 0;
-            width: 95px;
+            width: 73px;
             .menu{
                 justify-content: center;
                 i{
@@ -1533,7 +1578,7 @@ main{
         }
         .playlist{
             border-radius: 0 0 $radius $radius;
-            width: 95px;
+            width: 72px;
             height: 627px;
             display: flex;
             flex-direction: column;
